--- a/taskflow-frontend/src/App.css
+++ b/taskflow-frontend/src/App.css
@@ -70,6 +70,12 @@ body {
   .sidebar ul {
     list-style: none;
     padding: 0;
+    border: 1px solid #fff;
+    margin-top: 10vw;
+  }
+  .sidebar ul span{
+    width: 100%;
+    height: 200px;
   }
   
   .sidebar ul li {
@@ -78,6 +84,7 @@ body {
     display: flex;
     align-items: center;
     transition: background-color 0.3s;
+    border: 1px solid #fff;
   }
   .sidebar ul li i {
     margin-right: 10px;
