--- a/taskflow-frontend/src/components/ProjectPage.css
+++ b/taskflow-frontend/src/components/ProjectPage.css
@@ -11,11 +11,14 @@
     background-color: #f0f0f0;
   padding: 10px;
   border-radius: 5px;
+  width: 30%;
+  height: 100%;
   }
   
   .task-section h3 {
     font-size: 18px;
     margin-bottom: 10px;
+    text-align: center;
   }
   
   /* src/components/MessagingPage.css */
@@ -37,4 +40,10 @@
   
   .task-item:hover {
     background-color: #e0e0e0;
+  }
+  .project-page span{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 10vh;
   }
