--- a/taskflow-frontend/src/components/ProjectPage.css
+++ b/taskflow-frontend/src/components/ProjectPage.css
@@ -6,6 +6,10 @@
     margin-bottom: 10px;
     font-size: 24px;
   }
+  .task-sections {
+    display: flex;
+    justify-content: space-between;
+  }
   .task-section {
     margin-bottom: 20px;
     background-color: #f0f0f0;
@@ -13,6 +17,7 @@
   border-radius: 5px;
   width: 30%;
   height: 100%;
+  border-radius: 15px;
   }
   
   .task-section h3 {
@@ -36,6 +41,7 @@
     background-color: #ffffff;
     border: 1px solid #ccc;
     border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
   
   .task-item:hover {
